@@ -1,3 +1,8 @@
+2008-07-17  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Implemented /who command (closes trac
+	  bug #51).
+
 2008-07-15  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Use global username if server
